--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ ol {
   letter-spacing: 0.32px;
 }
 
-.header .logotype,
+.list-nav .logotype,
 .footer .logotype {
   color: #4d5ae5;
   font-family: 'Raleway', sans-serif;
